[package]
name = "escape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.7"
bevy_prototype_debug_lines = { git = "https://github.com/ChangeCaps/bevy_debug_lines", features = ["3d"] } 
bevy-inspector-egui = "0.11"
crossbeam = "0.8"
heron = { version = "3.0", features = ["3d"] }
noise = "0.7"
ron = "0.7"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
debug = []
